@@ -1,3 +1,9 @@
+2012-08-01  Corinna Vinschen  <vinschen@redhat.com>
+
+	* oleacc.idl: Throughout, replace long and unsigned long with LONG and
+	ULONG.
+	* oleacc.h: Regenerate.
+
 2012-07-31  Corinna Vinschen  <vinschen@redhat.com>
 
 	* windows.h: Don't include stralign.h when build for Cygwin.
